# vPET-ABC-fast-PET-kinetic-modelling-on-large-data

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example usage.ipynb  pyproject.toml  vPET_ABC_FDG_GPU.py
Archive_CuPy/code/: PET_ABC_GPU_2TCM-1K.py  PET_ABC_GPU_lpnt_MRTM.py
Archive_CuPy/data/: sample_data.csv
Archive_CuPy/data/expected_output/: model.csv  parameters.csv
JAX alternative/: ABC_JAX.ipynb  ABC_uiltilities.py  example usage.ipynb  simulated_data.csv
code/: PET_ABC_GPU_2TCM-1K.py  PET_ABC_GPU_2TCM.py  PET_ABC_GPU_lpnt_MRTM.py  vPET_ABC_FDG_GPU.py
data/: sample 2TCM.csv  sample lpntPET.csv
data/expected_output/: model.csv
expected_output/: parameters.csv
src/vpetabc/: __init__.py  engine.py  models.py  priors.py  utilities.py
